--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ blinker==1.4
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
+dj-database-url==0.5.0
 Django==3.0.4
 django-cors-headers==3.2.1
+django-heroku==0.3.1
 djangorestframework==3.11.0
 djangorestframework-stubs==1.1.0
 dnspython==1.16.0
@@ -29,6 +31,7 @@ oauth2client==4.1.3
 oauthlib==3.1.0
 Pillow==7.0.0
 protobuf==3.11.3
+psycopg2==2.7.5
 psycopg2-binary==2.8.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -43,4 +46,5 @@ sqlparse==0.3.1
 uritemplate==3.0.1
 urllib3==1.25.8
 Werkzeug==1.0.1
+whitenoise==5.0.1
 
